# function-calling-weather-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/function-calling-weather-bot/: __init__.py  conversation_handler.py  services.py  services_spec.py  utils.py
src/scaled_cognition_takehome/: ICONS.py  console.py  conversation_handler.py  services.py  services_spec.py  utils.py
tests/: test_services.py
