[project]
    name = "scaled-cognition-takehome"
    version = "0.0.0"
    description = "Default template for PDM package"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = ["openai>=1.30.1", "requests>=2.31.0", "rich>=13.7.1"]
    requires-python = "==3.11.*"
    readme = "README.md"
    license = { text = "none" }

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"

[tool.pdm]
    distribution = true

[tool.ruff]
    line-length = 120
